--- a/templates/base/components/datatable/static/formtablerow/layout.html.twig
+++ b/templates/base/components/datatable/static/formtablerow/layout.html.twig
@@ -1,7 +1,11 @@
 {# @copyright   Copyright (C) 2010-2021 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 
-<tr role="row" id="{{ oUIBlock.GetRef() }}_row_{{ oUIBlock.GetRowId() }}" {% for cellName,cellValue in oUIBlock.GetData() %}  {% if cellName == 'CSSClass' %}class="{{ cellValue }}"{% endif %}{% endfor %}>
+<tr role="row" id="{{ oUIBlock.GetRef() }}_row_{{ oUIBlock.GetRowId() }}" {% for cellName,cellValue in oUIBlock.GetData() %}  
+        {% if cellName == '@id' %}id="{{ cellValue }}" {% endif %}
+        {% if cellName == '@class' %} class="{{ cellValue }}"{% endif %}
+        {% if cellName == '@meta' %} {{ cellValue | raw}}{% endif %}{% endfor %}
+>
     {% for colName,column in oUIBlock.GetColumns() %}
         <td>
             {% set cellValueHtml = '' %}
