N°4315 - Polish bulk modify screens

--- a/templates/base/components/field/layout.html.twig
+++ b/templates/base/components/field/layout.html.twig
@@ -24,18 +24,18 @@
         {% endif %}
 >
     <div class="ibo-field--label">{{ oUIBlock.GetLabel()|raw }}
-        {% if oUIBlock.GetLayout()=='large' %}
+        {% if oUIBlock.GetLayout() == constant("Combodo\\iTop\\Application\\UI\\Base\\Component\\Field\\Field::ENUM_FIELD_LAYOUT_LARGE") %}
             {% if oUIBlock.GetComments() %}
                 <div class="ibo-field--comments">{{ oUIBlock.GetComments()|raw }}</div>
             {% endif %}
         {% endif %}
     </div>
-    <div class="ibo-field--value compo" {% if oUIBlock.GetValueId() %}id="{{ oUIBlock.GetValueId() }}"{% endif %}>
+    <div class="ibo-field--value" {% if oUIBlock.GetValueId() %}id="{{ oUIBlock.GetValueId() }}"{% endif %}>
         {% for oSubBlock in oUIBlock.GetSubBlocks() %}
             {{ render_block(oSubBlock, {aPage: aPage}) }}
         {% endfor %}
     </div>
-    {% if oUIBlock.GetLayout()!='large' %}
+    {% if oUIBlock.GetLayout() != constant("Combodo\\iTop\\Application\\UI\\Base\\Component\\Field\\Field::ENUM_FIELD_LAYOUT_LARGE") %}
         {% if oUIBlock.GetComments() %}
             <div class="ibo-field--comments">{{ oUIBlock.GetComments()|raw }}</div>
         {% endif %}
