--- a/css/backoffice/components/input/_input-select.scss
+++ b/css/backoffice/components/input/_input-select.scss
@@ -213,5 +213,5 @@ $ibo-input-select--autocomplete-item-image--border: 1px solid $ibo-color-grey-60
 }
 
 .ibo-input-select--autocomplete-item-txt {
-  white-space: nowrap;
+  @extend %ibo-text-truncated-with-ellipsis;
 }
