N°3520 - Add missing data-role on UIBlocks

--- a/templates/base/components/form/layout.html.twig
+++ b/templates/base/components/form/layout.html.twig
@@ -1,5 +1,6 @@
 <form method="post" enctype="multipart/form-data" id="{{ oUIBlock.GetId() }}"
-      class="{% if oUIBlock.IsHidden() %} ibo-is-hidden{% endif %}"
+      class="ibo-form {% if oUIBlock.IsHidden() %}ibo-is-hidden{% endif %}"
+      data-role="ibo-form"
         {% if oUIBlock.GetOnSubmitJsCode() %}
             onSubmit="{{ oUIBlock.GetOnSubmitJsCode() }}"
         {% endif %}
