--- a/templates/base/components/popover-menu/item/mode_separator.html.twig
+++ b/templates/base/components/popover-menu/item/mode_separator.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base/components/popover-menu/item/layout.html.twig' %}
 {% block iboPopoverMenuItem %}
-    <hr class="ibo-popover-menu--item ibo-popover-menu--separator"
+    <hr class="ibo-popover-menu--item ibo-popover-menu--separator" data-role="ibo-popover-menu--item ibo-popover-menu--separator"
             {% if oUIBlock.GetDataAttributes() %}
                 {% for sName, sValue in oUIBlock.GetDataAttributes() %}
                     data-{{ sName }}="{{ sValue }}"
