--- a/templates/base/layouts/page-content/layout.html.twig
+++ b/templates/base/layouts/page-content/layout.html.twig
@@ -1,4 +1,4 @@
-<div id="ibo-center-container" class="ibo-center-container {% block iboPageCenterContainerExtraClasses %}{% endblock %}">
+<div id="ibo-center-container" class="ibo-center-container {% block iboPageCenterContainerExtraClasses %}{% endblock %}" data-role="ibo-center-container">
 	{% block iboPageCenterContainer %}
 		<main id="ibo-main-content">
 			{# Note: The header is inside the main content div to avoid glitches with other layouts (eg. in a side content layout) #}
