--- a/templates/base/layouts/tab-container/tab/layout.html.twig
+++ b/templates/base/layouts/tab-container/tab/layout.html.twig
@@ -1,6 +1,6 @@
 {# @copyright   Copyright (C) 2010-2021 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
-<div id="{{ oUIBlock.GetId() }}" class="ibo-tab">
+<div id="{{ oUIBlock.GetId() }}" class="ibo-tab" data-role="ibo-tab">
     {% block iboContentBlockContainer %}
         {% for oSubBlock in oUIBlock.GetSubBlocks() %}
             {{ render_block(oSubBlock, {aPage: aPage}) }}
