--- a/templates/base/components/datatable/layout.live.js.twig
+++ b/templates/base/components/datatable/layout.live.js.twig
@@ -1,9 +1,9 @@
 {% if oUIBlock.GetOption("select_mode") is not empty %}
-    var oSelectedItems{{ oUIBlock.GetOption('sListId') }} = [];
-    {% if oUIBlock.GetOption("sSelectedRows") is not empty %}
-        oSelectedItems{{ oUIBlock.GetOption('sListId') }} = {{ oUIBlock.GetOption('sSelectedRows')|raw }};
-    {% endif %}
+var oSelectedItems{{ oUIBlock.GetOption('sListId') |sanitize(constant('utils::ENUM_SANITIZATION_FILTER_VARIABLE_NAME')) }} = [];
+{% if oUIBlock.GetOption("sSelectedRows") is not empty %}
+oSelectedItems{{ oUIBlock.GetOption('sListId') |sanitize(constant('utils::ENUM_SANITIZATION_FILTER_VARIABLE_NAME')) }} = {{ oUIBlock.GetOption('sSelectedRows')|raw }};
+{% endif %}
 {% endif %}
 
-var bSelectAllowed{{ oUIBlock.GetId() }} = false;
+var bSelectAllowed{{ oUIBlock.GetId()|sanitize(constant('utils::ENUM_SANITIZATION_FILTER_VARIABLE_NAME')) }} = false;
 
