N°4370 - Field content overlapping on rest of the UI (Backoffice) - 2

--- a/css/backoffice/components/_fieldset.scss
+++ b/css/backoffice/components/_fieldset.scss
@@ -18,6 +18,10 @@ $ibo-fieldset--legend--border-bottom-style: solid !default;
   }
 }
 
+.ibo-column > .ibo-fieldset {
+  display: contents;
+}
+
 .ibo-multi-column ~ .ibo-fieldset {
   margin-top: $ibo-fieldset--sibling-spacing;
 }
