--- a/css/backoffice/components/input/_input-select.scss
+++ b/css/backoffice/components/input/_input-select.scss
@@ -104,7 +104,7 @@ $ibo-input-select--autocomplete-item-image--border: 1px solid $ibo-color-grey-60
 }
 .ibo-input-select-wrapper--with-buttons .selectize-control
 {
-	display: inline-block;
+	display: grid;
 	width: $ibo-input-select-wrapper--width;
 }
 .ibo-input-select-wrapper::after{
