--- a/css/backoffice/components/input/_input.scss
+++ b/css/backoffice/components/input/_input.scss
@@ -49,11 +49,22 @@ $ibo-input--margin-x: 5px !default;
 		color: $ibo-input--placeholder--color;
 	}
 }
-.ibo-input-wrapper.is-error {
-	.ibo-input{
-		background-color: $ibo-input-wrapper--is-error--background-color;
+texarea.ibo-input{
+  height:unset;
+}
+.ibo-input-wrapper.is-error, .ibo-input-field-wrapper.is-error {
+	.ibo-input, .ibo-input-vanilla,  .cke, textarea {
     border: 1px solid $ibo-input-wrapper--is-error--border-color;
+    background-color: $ibo-input-wrapper--is-error--background-color;
   }
+  .ibo-input-vanilla input{
+    border: 0;
+    background-color: #11ffee00;
+  }
+}
+input.ibo-input-vanilla{
+  width: unset;
+  display:initial;
 }
 .ibo-input-wrapper--with-buttons{
   position: relative;
