N°2875 - RichText: Fix config property being an array instead of a string (also add a setter)

--- a/templates/base/components/input/richtext/layout.js.twig
+++ b/templates/base/components/input/richtext/layout.js.twig
@@ -1,1 +1,1 @@
-$('#{{ oUIBlock.GetId() }}').ckeditor(function() { /* callback code */ }, {{ oUIBlock.GetConfig()| raw }});
+$('#{{ oUIBlock.GetId() }}').ckeditor(function() { /* callback code */ }, {{ oUIBlock.GetConfig()|json_encode|raw }});
