N°4349 - Drop-down mandatory template field documented still required in modification

--- a/css/backoffice/components/input/_input.scss
+++ b/css/backoffice/components/input/_input.scss
@@ -49,7 +49,7 @@ $ibo-input--margin-x: 5px !default;
 		color: $ibo-input--placeholder--color;
 	}
 }
-texarea.ibo-input{
+textarea.ibo-input{
   height:unset;
 }
 .ibo-input-wrapper.is-error, .ibo-input-field-wrapper.is-error {
