N°4400 - Restore PHP debug output being displayed in a modal

--- a/templates/pages/backoffice/itopwebpage/layout.html.twig
+++ b/templates/pages/backoffice/itopwebpage/layout.html.twig
@@ -35,5 +35,6 @@
 	{% endif %}
 {% endblock %}
 
-
-
+{% block iboCapturedOutput %}
+    <div id="ibo-raw-output" class="ibo-is-hidden" title="Debug Output">{{ aPage.sCapturedOutput|raw }}</div>
+{% endblock %}
