N°4408 Fix inputs flickering when widgets are loading

--- a/css/backoffice/components/input/_all.scss
+++ b/css/backoffice/components/input/_all.scss
@@ -9,6 +9,7 @@
 @import "input-datetime";
 @import "input-duration";
 @import "input-image";
+@import "input-richtext";
 @import "input-select";
 @import "input-select-icon";
 @import "input-string";
