N°4412 Activity panel's notification entries weren't expandable since c0fc62b

--- a/css/backoffice/layout/activity-panel/_notification-entry.scss
+++ b/css/backoffice/layout/activity-panel/_notification-entry.scss
@@ -24,7 +24,7 @@ a.ibo-notification-entry--short-description {
 }
 /* - Long desc. opened */
 .ibo-notification-entry{
-  &.ibo-is-opened{
+  &:not(.ibo-is-closed){
     .ibo-notification-entry--long-description-toggler-icon{
       transform: rotateX(180deg);
     }
