--- a/templates/base/components/popover-menu/item/mode_url.html.twig
+++ b/templates/base/components/popover-menu/item/mode_url.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base/components/popover-menu/item/layout.html.twig' %}
 
 {% block iboPopoverMenuItem %}
-    <a class="ibo-popover-menu--item" data-role="ibo-popover-menu--item" href="{{ oUIBlock.GetUrl() }}" target="{{ oUIBlock.GetTarget() }}"
+    <a id="{{ oUIBlock.GetID() }}" class="ibo-popover-menu--item" data-role="ibo-popover-menu--item" data-uid="{{ oUIBlock.GetUID() }}" href="{{ oUIBlock.GetUrl() }}" target="{{ oUIBlock.GetTarget() }}"
             {% if oUIBlock.HasDataAttributes() %}
                 {% for sName, sValue in oUIBlock.GetDataAttributes() %}
                     data-{{ sName }}="{{ sValue }}"
