N°4408 - Improve transition buttons UX in object details
Transition buttons are now grouped in the "Apply" button when there is not enough space to display them all

--- a/css/backoffice/layout/object/_object-details.scss
+++ b/css/backoffice/layout/object/_object-details.scss
@@ -51,6 +51,13 @@ $ibo-object-details--tag--separator--border-radius: $ibo-border-radius-full !def
       }
     }
   }
+
+  // Note: Direct child selector is mandatory, otherwise a panel within a panel will have be impacted (eg. n:n relations tabs)
+  > .ibo-panel--header {
+    .ibo-panel--subtitle {
+      @extend %ibo-text-truncated-with-ellipsis;
+    }
+  }
 }
 
 .ibo-object-details--status {
